/*
 * Copyright 2019, Offchain Labs, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package structures;
import "value/value.proto";
import "protocol/protocol.proto";
import "valprotocol/valprotocol.proto";
option go_package = "github.com/offchainlabs/arbitrum/packages/arb-validator/structures";

message TimeTicksBuf {
    value.BigIntegerBuf val = 1;
}

message ChainParamsBuf {
    value.BigIntegerBuf stakeRequirement = 1;
    TimeTicksBuf gracePeriod = 2;
    uint32 maxExecutionSteps = 3;
}

message VMProtoDataBuf {
    value.HashBuf machineHash = 1;
    value.HashBuf pendingTop = 2;
    value.BigIntegerBuf pendingCount = 3;
}

message AssertionParamsBuf {
    uint32 numSteps = 1;
    protocol.TimeBoundsBlocksBuf timeBounds = 2;
    value.BigIntegerBuf importedMessageCount = 3;
}

message AssertionClaimBuf {
    value.HashBuf afterPendingTop = 1;
    value.HashBuf importedMessagesSlice = 2;
    valprotocol.ExecutionAssertionStubBuf assertionStub = 3;
}

message DisputableNodeBuf {
    AssertionParamsBuf assertionParams = 1;
    AssertionClaimBuf assertionClaim = 2;
    value.HashBuf maxPendingTop = 3;
    value.BigIntegerBuf maxPendingCount = 4;
}

message PendingInboxBuf {
    value.BigIntegerBuf topCount = 1;
    repeated value.HashBuf itemHashes = 2;
    value.HashBuf hashOfRest = 3;
}

message CheckpointManifest {
    repeated value.HashBuf values = 1;
    repeated value.HashBuf machines = 2;
}

message CheckpointMetadata {
    uint64 formatVersion = 1;
    BlockIdBuf oldest = 2;
    BlockIdBuf newest = 3;
}

message CheckpointLinks {
    BlockIdBuf next = 1;
    BlockIdBuf prev = 2;
}

message BlockIdBuf {
    value.BigIntegerBuf height = 1;
    value.HashBuf headerHash = 2;
}

